<resources>
    <string name="app_name">房钱</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="rememberPassword">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="login">登录</string>

    <!--注册-->
    <string name="r_phoneNum">手机号</string>
    <string name="r_password">密码</string>
    <string name="r_password2">确认密码</string>
    <string name="r_regist">注册</string>


    <!--首页-->
    <string name="firstPage">首页</string>
    <string name="home_title">找了吗装修贷款</string>
    <string name="ZXGL">装修攻略</string>
    <string name="DKHD">贷款活动</string>
    <string name="JZZT">家装活动</string>
    <string name="ZXGS">装修公司</string>


    <!--样板间-->
    <string name="ybj">样板间</string>
    <!--装修贷-->
    <string name="loan">贷款</string>
    <string name="Allloan">全部贷款</string>
    <string name="zxd">贷款</string>
    <!--我的-->
    <string name="my">我的</string>
    <string name="myLoan">我的贷款</string>
    <string name="myCollect">我的收藏</string>
    <string name="myAppointment">我的预约</string>
    <string name="myApply">入驻申请</string>
    <string name="helpCenter">帮助中心</string>
    <string name="aboutOurs">关于我们</string>

    <string name="nickname">昵称</string>
    <string name="confrim">确定</string>

    <!--入驻申请-->
    <string name="applyPersonInformation">申请人信息</string>
    <string name="applyName">姓名</string>
    <string name="companyName">公司名称</string>
    <string name="area">所在地区</string>
    <string name="detailAddress">详细地址</string>
    <string name="businessLicense">营业执照</string>
    <string name="idCard">法人身份证</string>
    <string name="submitInformation">提交资料</string>
    <string name="organizationName">机构名称</string>
    <string name="contactWay">联系方式</string>


    <!--预约-->
    <string name="house_typeHint">×室×厅×厨×卫×阳台</string>

    <!--评论-->
    <string name="comment">刚装完效果真是很好啊，简欧风非常的温馨，装修师傅很好，非常负责，每一步都跟我沟通确认，施工中有任何问题都认真对待。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
