<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@drawable/login_bg"
    >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logintop"
                android:layout_gravity="center"
                android:scaleY="0.6"
                android:scaleX="0.6"
                android:id="@+id/imageView3"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/login_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColor="@color/colorAccent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/login_rememberPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/rememberPassword" />
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_bt"
                android:textColor="@color/apply_for_color_selector"
                android:enabled="true"
                android:text="登录"
                android:background="@drawable/login_btn_selector"
                android:layout_marginTop="16dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/bigmdp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="还没有账号？"
                    android:textColor="@color/colorAccent"
                    />
                <TextView
                    android:id="@+id/home_regist_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="快速注冊"
                    android:lines="1"
                    android:textColor="@color/colorAccent"
                    android:clickable="true"
                    android:background="@drawable/home_applyloan_txt_sel"
                    android:textSize="@dimen/smallsp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
